--- a/assets/apps/caputok/privacy_policy.html
+++ b/assets/apps/caputok/privacy_policy.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <h1>Privacy Policy for Caputok</h1>
-  <p>Effective Date: [Insert Date]</p>
+  <p>Effective Date: Immediate</p>
   <p>Caputok (“the App”) is committed to protecting your privacy. This Privacy Policy explains how your data is handled when you use our app.</p>
   <h2>1. Data Collection</h2>
   <p>User-Uploaded Files: Caputok processes text files (e.g., followers and following lists) that you upload directly into the App. All processing occurs entirely on your device, and no data is transmitted to any external server or third-party service.</p>
