--- a/assets/apps/caputok/terms_of_use.html
+++ b/assets/apps/caputok/terms_of_use.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <h1>Terms of Use for Caputok</h1>
-    <p><strong>Effective Date:</strong> [Insert Date]</p>
+    <p><strong>Effective Date:</strong> Immediate</p>
 
     <section>
         <h2>1. General Use</h2>
