--- a/assets/apps/caputok/privacy_policy.html
+++ b/assets/apps/caputok/privacy_policy.html
@@ -26,8 +26,12 @@
 <p>Caputok requires certain device permissions to function:</p>
 <p>Storage Access: To allow the App to access and analyze the text files you choose to upload. This permission is limited to the scope of functionality and is not used for any other purpose.</p>
 <h3>3. Data Usage</h3>
-<p>The App generates results based on the uploaded files. These results are stored locally on your device and are not shared with any third party.</p>
-<p>The generated links (e.g., https://tiktok.com/@username) are based solely on the input files you provide and are not associated with any external platform.</p>
+<p><strong>Local Processing:</strong> The App processes the text files you upload exclusively on your device. No data from these files is sent to or stored on any external server or service.</p>
+<p><strong>Result Generation:</strong> Based on the data in your uploaded files, Caputok generates results which are displayed within the App. These results do not leave your device and are not shared with any third party.</p>
+<p><strong>Generated Links:</strong> The links produced (e.g., https://tiktok.com/@username) are constructed using data from your input files. They serve as a visual representation of the analysis but do not connect to any service unless you manually navigate to them outside the App.</p> 
+<p><strong>No External Storage:</strong> All generated information remains on your device. Caputok does not keep any record or copy of the files you upload or the results produced after you close the App unless you choose to save or export them manually.</p>
+<p><strong>User Control:</strong> You have full control over any data within the App. You can delete the files and results at any time through standard device operations or within the App's interface if such functionality is provided.</p>
+
 <h2>4. Third-Party Services</h2>
   <p>As of the current version, Caputok does not integrate with or use any third-party services.</p>
 <h2>5. User Rights (EU GDPR Compliance)</h2>
