--- a/assets/apps/caputok/terms_of_use.html
+++ b/assets/apps/caputok/terms_of_use.html
@@ -64,8 +64,12 @@
         <p>We may update or modify the App and these Terms at any time. Continued use of the App indicates acceptance of the updated terms.</p>
     </section>
 
+<section>
+    <h2>6. Intellectual Property</h2>
+    <p>All content within the App, including but not limited to, text, graphics, logos, and software, are the property of Caputok or its licensors and are protected by copyright, trademark, and other laws. You may not copy, reproduce, or use any such content without express permission.</p>
+</section>    
     <section>
-        <h2>6. Governing Law</h2>
+        <h2>7. Governing Law</h2>
         <p>These Terms are governed by the laws of <strong>Nepal</strong>. Any disputes arising from the use of the App will be subject to the jurisdiction of <strong>Nepali Court</strong>.</p>
     </section>
 
