--- a/assets/apps/caputok/terms_of_use.html
+++ b/assets/apps/caputok/terms_of_use.html
@@ -69,7 +69,17 @@
     <p>All content within the App, including but not limited to, text, graphics, logos, and software, are the property of Caputok or its licensors and are protected by copyright, trademark, and other laws. You may not copy, reproduce, or use any such content without express permission.</p>
 </section>    
     <section>
-        <h2>7. Governing Law</h2>
+
+        <section>
+    <h2>7. Acknowledgment</h2>
+    <p>
+        By using this App, you acknowledge that you have read these Terms of Use and 
+        <a href="https://example.com/privacy-policy" target="_blank">Privacy Policy</a>, 
+        understand them, and agree to be bound by them.
+    </p>
+</section>
+
+        <h2>8. Governing Law</h2>
         <p>These Terms are governed by the laws of <strong>Nepal</strong>. Any disputes arising from the use of the App will be subject to the jurisdiction of <strong>Nepali Court</strong>.</p>
     </section>
 
