--- a/assets/apps/caputok/terms_of_use.html
+++ b/assets/apps/caputok/terms_of_use.html
@@ -74,7 +74,7 @@
     <h2>7. Acknowledgment</h2>
     <p>
         By using this App, you acknowledge that you have read these Terms of Use and 
-        <a href="assets/apps/caputok/privacy_policy.html" target="_blank">Privacy Policy</a>, 
+        <a href="https://krishnaniraula.com.np/assets/apps/caputok/privacy_policy.html" target="_blank">Privacy Policy</a>, 
         understand them, and agree to be bound by them.
     </p>
 </section>
