--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krishna's Space</title>
-<link rel="shortcut icon" type="image/icon" href="C:\Users\Krishna\Documents\web\assets\1.png"/>
+<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
     <link rel="stylesheet" href="C:\Users\Krishna\Documents\web\styles.css">
 </head>
 <body>
