--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krishna's Space</title>
 <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
-    <link rel="stylesheet" href="C:\Users\Krishna\Documents\web\styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
@@ -42,32 +42,32 @@
     </nav>
     <main>
     <div class="intro">
-        <img src="C:\Users\Krishna\Documents\web\assets\welcome-banner.jpeg" alt="Main Photo">
+        <img src="assets/images/welcome-banner.jpeg" alt="Main Photo">
         <p>Welcome to Krishna's website. Here you will find various resources and information.</p>
     </div>
     <div class="gallery">
         <div class="photo">
-            <img src="C:\Users\Krishna\Documents\web\assets\1.jpg" alt="Description 1">
+            <img src="assets/images/1.jpg" alt="Description 1">
             <p>Description 1</p>
         </div>
         <div class="photo">
-            <img src="C:\Users\Krishna\Documents\web\assets\2.jpg" alt="Description 2">
+            <img src="assets/images/2.jpg" alt="Description 2">
             <p>Description 2</p>
         </div>
         <div class="photo">
-            <img src="C:\Users\Krishna\Documents\web\assets\3.jpg" alt="Description 3">
+            <img src="assets/images/3.jpg" alt="Description 3">
             <p>Description 3</p>
         </div>
         <div class="photo">
-            <img src="C:\Users\Krishna\Documents\web\assets\4.jpg" alt="Description 4">
+            <img src="assets/images/4.jpg" alt="Description 4">
             <p>Description 4</p>
         </div>
         <div class="photo">
-            <img src="C:\Users\Krishna\Documents\web\assets\5.png" alt="Description 5">
+            <img src="assets/images/5.png" alt="Description 5">
             <p>Description 5</p>
         </div>
         <div class="photo">
-            <img src="C:\Users\Krishna\Documents\web\assets\6.png" alt="Description 6">
+            <img src="assets/images/6.png" alt="Description 6">
             <p>Description 6</p>
         </div>
     </div>
@@ -203,6 +203,6 @@
         </div>
         <p>© 2025 Krishna. All rights reserved.</p>
     </footer>
-    <script src="C:\Users\Krishna\Documents\web\scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
