--- a/assets/apps/caputok/privacy_policy.html
+++ b/assets/apps/caputok/privacy_policy.html
@@ -3,15 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy for Caputok</title>
+    <title>Terms of Use - Caputok</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
-            padding: 20px;
+            margin: 20px;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
         }
         h1, h2 {
-            color: #333;
+            color: #444;
+        }
+        h1 {
+            text-align: center;
+        }
+        section {
+            margin-bottom: 20px;
+            padding: 10px;
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .contact {
+            margin-top: 20px;
+            font-style: italic;
         }
     </style>
 </head>
@@ -20,11 +38,11 @@
   <p>Effective Date: Date of app release</p>
   <p>Caputok (“the App”) is committed to protecting your privacy. This Privacy Policy explains how your data is handled when you use our app.</p>
   <h2>1. Data Collection</h2>
-  <p>User-Uploaded Files: Caputok processes text files (e.g., followers and following lists) that you upload directly into the App. All processing occurs entirely on your device, and no data is transmitted to any external server or third-party service.</p>
-<p>Offline Usage: The App does not require or use an internet connection, and no information is shared externally.</p>
+  <p><strong>User-Uploaded Files:</strong> Caputok processes text files (e.g., followers and following lists) that you upload directly into the App. All processing occurs entirely on your device, and no data is transmitted to any external server or third-party service.</p>
+<p><strong>Offline Usage:</strong> The App does not require or use an internet connection, and no information is shared externally.</p>
 <h2>2. Permissions</h2>
 <p>Caputok requires certain device permissions to function:</p>
-<p>Storage Access: To allow the App to access and analyze the text files you choose to upload. This permission is limited to the scope of functionality and is not used for any other purpose.</p>
+<p><strong>Storage Access:</strong> To allow the App to access and analyze the text files you choose to upload. This permission is limited to the scope of functionality and is not used for any other purpose.</p>
 <h3>3. Data Usage</h3>
 <p><strong>Local Processing:</strong> The App processes the text files you upload exclusively on your device. No data from these files is sent to or stored on any external server or service.</p>
 <p><strong>Result Generation:</strong> Based on the data in your uploaded files, Caputok generates results which are displayed within the App. These results do not leave your device and are not shared with any third party.</p>
@@ -36,8 +54,8 @@
   <p>As of the current version, Caputok does not integrate with or use any third-party services.</p>
 <h2>5. User Rights (EU GDPR Compliance)</h2>
 <h3>If you are located in the European Union, you have the following rights regarding your data:</h3>
-<p>Right to Access: Since no data is stored or shared externally, there is no data stored by Caputok for you to access.</p>
-<p>Right to Deletion: Uploaded files and generated results can be deleted directly from your device.</p>
+<p><strong>Right to Access:</strong> Since no data is stored or shared externally, there is no data stored by Caputok for you to access.</p>
+<p><strong>Right to Deletion:</strong> Uploaded files and generated results can be deleted directly from your device.</p>
 <h2>6. Changes to the Privacy Policy</h2>
 <p>We may update this Privacy Policy from time to time. Changes will be effective immediately upon posting the updated policy. Please review this document periodically.</p>
 <h2>Contact Information:</h2>
