--- a/assets/apps/caputok/privacy_policy.html
+++ b/assets/apps/caputok/privacy_policy.html
@@ -36,10 +36,15 @@
 <body>
   <h1>Privacy Policy for Caputok</h1>
   <p>Effective Date: Date of app release</p>
-  <p>Caputok (“the App”) is committed to protecting your privacy. This Privacy Policy explains how your data is handled when you use our app.</p>
+      <section>
+<p>Caputok (“the App”) is committed to protecting your privacy. This Privacy Policy explains how your data is handled when you use our app.</p>
+    </section>
+    <section>
   <h2>1. Data Collection</h2>
   <p><strong>User-Uploaded Files:</strong> Caputok processes text files (e.g., followers and following lists) that you upload directly into the App. All processing occurs entirely on your device, and no data is transmitted to any external server or third-party service.</p>
 <p><strong>Offline Usage:</strong> The App does not require or use an internet connection, and no information is shared externally.</p>
+    </section>
+    <section>
 <h2>2. Permissions</h2>
 <p>Caputok requires certain device permissions to function:</p>
 <p><strong>Storage Access:</strong> To allow the App to access and analyze the text files you choose to upload. This permission is limited to the scope of functionality and is not used for any other purpose.</p>
@@ -49,17 +54,26 @@
 <p><strong>Generated Links:</strong> The links produced (e.g., https://tiktok.com/@username) are constructed using data from your input files. They serve as a visual representation of the analysis but do not connect to any service unless you manually navigate to them outside the App.</p> 
 <p><strong>No External Storage:</strong> All generated information remains on your device. Caputok does not keep any record or copy of the files you upload or the results produced after you close the App unless you choose to save or export them manually.</p>
 <p><strong>User Control:</strong> You have full control over any data within the App. You can delete the files and results at any time through standard device operations or within the App's interface if such functionality is provided.</p>
+    </section>
 
+    <section>
 <h2>4. Third-Party Services</h2>
   <p>As of the current version, Caputok does not integrate with or use any third-party services.</p>
+    </section>
+    <section>
 <h2>5. User Rights (EU GDPR Compliance)</h2>
 <h3>If you are located in the European Union, you have the following rights regarding your data:</h3>
 <p><strong>Right to Access:</strong> Since no data is stored or shared externally, there is no data stored by Caputok for you to access.</p>
 <p><strong>Right to Deletion:</strong> Uploaded files and generated results can be deleted directly from your device.</p>
+    </section>
+    <section>
 <h2>6. Changes to the Privacy Policy</h2>
 <p>We may update this Privacy Policy from time to time. Changes will be effective immediately upon posting the updated policy. Please review this document periodically.</p>
+    </section>
+    <section>
 <h2>Contact Information:</h2>
 <p>For questions about this Privacy Policy, contact us at:</p>
 <p>mail@krishnaniraula.com.np</p>
+    </section>
 </body>
 </html>
