--- a/assets/apps/caputok/privacy_policy.html
+++ b/assets/apps/caputok/privacy_policy.html
@@ -48,7 +48,9 @@
 <h2>2. Permissions</h2>
 <p>Caputok requires certain device permissions to function:</p>
 <p><strong>Storage Access:</strong> To allow the App to access and analyze the text files you choose to upload. This permission is limited to the scope of functionality and is not used for any other purpose.</p>
-<h3>3. Data Usage</h3>
+    </section>  
+  <section>
+<h2>3. Data Usage</h2>
 <p><strong>Local Processing:</strong> The App processes the text files you upload exclusively on your device. No data from these files is sent to or stored on any external server or service.</p>
 <p><strong>Result Generation:</strong> Based on the data in your uploaded files, Caputok generates results which are displayed within the App. These results do not leave your device and are not shared with any third party.</p>
 <p><strong>Generated Links:</strong> The links produced (e.g., https://tiktok.com/@username) are constructed using data from your input files. They serve as a visual representation of the analysis but do not connect to any service unless you manually navigate to them outside the App.</p> 
