--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     </ul>
                 </li>
                 <li>Contact</li>
+		    <li><a href="news.html" target="_blank">News</a></li>
                 <li>About</li>
             </ul>
         </div>
