--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News - Krishna's Space</title>
-    <link rel="shortcut icon" type="image/icon" href="../assets/logo/favicon.png"/>
+    <link rel="shortcut icon" type="image/icon" href="/assets/logo/favicon.png"/>
     <link rel="stylesheet" href="../styles.css">
     <style>
         body {
@@ -72,53 +72,14 @@
 </nav>
 
 <div class="rss-feed-container">
-    <p class="disclaimer">All news are automatically collected from the web. I am not responsible for any content on this page. For disputes, please contact the original creators.</p>
+    <p class="disclaimer">All news are automatically collected from the web. We are not responsible for any content on this page. For disputes, please contact the original creators.</p>
     <div class="rss-feed" id="rss-feed-content">
         <!-- RSS feed content will be dynamically inserted here -->
     </div>
     <div id="error-message" class="error-message" style="display: none;"></div>
 </div>
 
-<script>
-    function fetchRSS() {
-        const feedURL = 'https://www.google.com/alerts/feeds/06313983183609550648/16533116384737951623';
-        
-        // A simple workaround for CORS is to use a CORS proxy service
-        const corsProxy = 'https://cors-anywhere.herokuapp.com/';
-        
-        fetch(corsProxy + feedURL)
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                return response.text();
-            })
-            .then(str => new window.DOMParser().parseFromString(str, "text/xml"))
-            .then(data => {
-                const items = data.querySelectorAll("item");
-                let html = '';
-                items.forEach(el => {
-                    html += `
-                        <div class="feed-item">
-                            <h3 class="feed-title"><a href="${el.querySelector("link").textContent}" target="_blank">${el.querySelector("title").textContent}</a></h3>
-                            <p class="feed-description">${el.querySelector("description").textContent}</p>
-                            <p class="feed-date">${new Date(el.querySelector("pubDate").textContent).toLocaleString()}</p>
-                        </div>
-                    `;
-                });
-                document.getElementById('rss-feed-content').innerHTML = html;
-                document.getElementById('error-message').style.display = 'none';
-            })
-            .catch(error => {
-                console.error("Error fetching the RSS feed:", error);
-                document.getElementById('rss-feed-content').innerHTML = '';
-                document.getElementById('error-message').innerHTML = 'Error loading news. Please try again later.';
-                document.getElementById('error-message').style.display = 'block';
-            });
-    }
-
-    document.addEventListener("DOMContentLoaded", fetchRSS);
-</script>
+<script src="news.js"></script>
 
 </body>
 </html>
