--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News - Krishna's Space</title>
+    <title>News about Construction Industry in Nepal</title>
     <link rel="shortcut icon" type="image/icon" href="/assets/logo/favicon.png"/>
     <link rel="stylesheet" href="../styles.css">
     <style>
