--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News about Construction Industry in Nepal</title>
+    <title>News - Krishna's Space</title>
     <link rel="shortcut icon" type="image/icon" href="/assets/logo/favicon.png"/>
     <link rel="stylesheet" href="../styles.css">
     <style>
@@ -50,7 +50,7 @@
             -webkit-line-clamp: 3; /* number of lines to show */
             -webkit-box-orient: vertical;
         }
-        .feed-date {
+        .feed-date, .feed-publisher {
             font-size: 12px;
             color: #777;
         }
@@ -68,7 +68,7 @@
 <body>
 
 <nav>
-    <a href="../index.html">Back to Home</a>
+    <a href="/index.html">Back to Home</a>
 </nav>
 
 <div class="rss-feed-container">
