--- a/assets/apps/caputok/privacy_policy.html
+++ b/assets/apps/caputok/privacy_policy.html
@@ -70,7 +70,7 @@
     </section>
     <section>
 <h2>6. Changes to the Privacy Policy</h2>
-<p>We may update this Privacy Policy from time to time. Changes will be effective immediately upon posting the updated policy. Please review this document periodically.</p>
+<p>We may update this Privacy Policy on Every APP Updates. Changes will be effective immediately upon posting the updated policy. Please review this document periodically.</p>
     </section>
     <section>
 <h2>Contact Information:</h2>
