--- a/index.html
+++ b/index.html
@@ -186,7 +186,17 @@
 						</div><!-- /.row -->
 					</div>	<!-- /.container -->		
 				</div><!-- /.skill-content-->
+</section>
+	<section>
 
+    <h1>Search Page</h1>
+    <form id="searchForm">
+        <input type="text" id="searchQuery" placeholder="Enter your query here" />
+        <button type="submit">Search</button>
+    </form>
+    <div id="results"></div>
+		
+	</section>
 
     <footer>
         <div class="footer-links">
