--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         <div class="search-box-container" id="searchBoxContainer">
             <h2>Search News</h2>
             <div>
-                <input type="text" id="searchBox1" placeholder="Search for the first ID...">
+                <input type="text" id="searchBox1" placeholder="Search From Source 1">
                 <button onclick="performSearch('searchBox1')">Search</button>
             </div>
             <div>
-                <input type="text" id="searchBox2" placeholder="Search for the second ID...">
+                <input type="text" id="searchBox2" placeholder="Search From Source 2">
                 <button onclick="performSearch('searchBox2')">Search</button>
             </div>
         </div>
