--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav-right">
             <div class="menu-icon" onclick="toggleMenu()">☰</div>
             <ul id="menu">
-                <li> onclick="showSearchBoxes()">News on Demand</li>
+                <li>Loading ...</li>
                 <li class="dropdown">Apps
                     <ul class="dropdown-content">
                         <li class="dropdown">Caputok
@@ -36,7 +36,7 @@
                     </ul>
                 </li>
                 <li>Contact</li>
-		    <li><a href="news.html" target="_blank">News</a></li>
+		  
                 <li>About</li>
             </ul>
         </div>
