--- a/news.html
+++ b/news.html
@@ -3,83 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News - Krishna's Space</title>
-    <link rel="shortcut icon" type="image/icon" href="/assets/logo/favicon.png"/>
-    <link rel="stylesheet" href="../styles.css">
+    <title>Personalized News</title>
     <style>
+        /* Basic styling for the search form and results */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #f4f4f4;
         }
-        .rss-feed-container {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        .rss-feed {
-            background: #fff;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            padding: 15px;
-            max-height: calc(100vh - 200px); /* Adjust for your layout */
-            overflow-y: auto;
-        }
-        .feed-item {
+        #searchForm {
             margin-bottom: 20px;
-            padding-bottom: 10px;
-            border-bottom: 1px solid #eee;
         }
-        .feed-title {
-            font-size: 18px;
-            color: #333;
+        #searchInput {
+            width: 70%;
+            padding: 10px;
+            font-size: 16px;
         }
-        .feed-title a {
-            text-decoration: none;
-            color: #007BFF;
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
         }
-        .feed-title a:hover {
-            text-decoration: underline;
+        #search-results {
+            margin-top: 20px;
         }
-        .feed-description {
-            font-size: 14px;
-            color: #555;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 3; /* number of lines to show */
-            -webkit-box-orient: vertical;
-        }
-        .feed-date, .feed-publisher {
-            font-size: 12px;
-            color: #777;
-        }
-        .disclaimer {
-            text-align: center;
-            margin-bottom: 20px;
-            font-style: italic;
-        }
-        .error-message {
-            color: red;
-            text-align: center;
+        #search-iframe {
+            width: 100%;
+            height: 500px;
+            border: none;
         }
     </style>
 </head>
 <body>
+    <h1>Personalized News Search</h1>
+    <!-- Search Form -->
+    <form id="searchForm">
+        <input type="text" id="searchInput" placeholder="Search news..." required />
+        <button type="submit">Search</button>
+    </form>
+    <!-- Container for Search Results -->
+    <div id="search-results"></div>
 
-<nav>
-    <a href="/index.html">Back to Home</a>
-</nav>
-
-<div class="rss-feed-container">
-    <p class="disclaimer">All news are automatically collected from the web. We are not responsible for any content on this page. For disputes, please contact the original creators.</p>
-    <div class="rss-feed" id="rss-feed-content">
-        <!-- RSS feed content will be dynamically inserted here -->
-    </div>
-    <div id="error-message" class="error-message" style="display: none;"></div>
-</div>
-
-<script src="news.js"></script>
-
+    <script>
+        document.getElementById('searchForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const query = document.getElementById('searchInput').value;
+            // Constructing the URL with the search query
+            const searchUrl = 'https://searchworker.niraula300.workers.dev/#gsc.tab=0&q=' + encodeURIComponent(query);
+            // Load search results in an iframe
+            document.getElementById('search-results').innerHTML = '<iframe id="search-iframe" src="' + searchUrl + '" width="100%" height="500"></iframe>';
+        });
+    </script>
 </body>
 </html>
