--- a/index.html
+++ b/index.html
@@ -39,9 +39,16 @@
             </ul>
         </div>
     </nav>
+	  <main>
+        <div class="intro">
+            <img src="assets/images/welcome-banner.jpeg" alt="Main Photo">
+            <p>Welcome to Krishna's website. Here you will find various resources and information.</p>
+        </div>
    <div id="content">
         <!-- This will be replaced by the news page when clicked -->
     </div>
+	  </main>
+	
   
 
 <section id="skills" class="skills">
