--- a/news.html
+++ b/news.html
@@ -7,23 +7,9 @@
 </head>
 <body>
     <h1>Personalized News Search</h1>
-    <!-- Search Form -->
-    <form id="searchForm">
-        <input type="text" id="searchInput" placeholder="Search news..." required />
-        <button type="submit">Search</button>
-    </form>
     <!-- Container for Search Results -->
-    <div id="search-results"></div>
-
-    <script>
-        document.getElementById('searchForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            const query = document.getElementById('searchInput').value;
-            // Constructing the URL with the search query
-            const searchUrl = 'https://searchworker.niraula300.workers.dev/#gsc.tab=0&q=' + encodeURIComponent(query);
-            // Load search results in an iframe
-            document.getElementById('search-results').innerHTML = '<iframe id="search-iframe" src="' + searchUrl + '" width="100%" height="500"></iframe>';
-        });
-    </script>
+    <div id="search-results">
+        <iframe id="search-iframe" src="https://searchworker.niraula300.workers.dev/#gsc.tab=0" width="100%" height="600"></iframe>
+    </div>
 </body>
 </html>
