--- a/news.html
+++ b/news.html
@@ -6,9 +6,9 @@
     <title>Personalized News</title>
 </head>
 <body>
-    <h1>Personalized News Search</h1>
+    <h1>News on Demand</h1>
     <!-- Container for Search Results -->
-    <div id="search-results">
+    <div>
         <iframe id="search-iframe" src="https://searchworker.niraula300.workers.dev/#gsc.tab=0" width="100%" height="600"></iframe>
     </div>
 </body>
