--- a/index.html
+++ b/index.html
@@ -40,13 +40,17 @@
         </div>
     </nav>
 	  <main>
-        <div class="intro">
-            <img src="assets/images/welcome-banner.jpeg" alt="Main Photo">
-            <p>Welcome to Krishna's website. Here you will find various resources and information.</p>
-        </div>
+        		<!--<div class="intro">
+       			 <img src="assets/images/welcome-banner.jpeg" alt="Main Photo">
+            			<p>Welcome to Krishna's website. Here you will find various resources and information.</p>
+     			   </div>
+		  
    <div id="content">
         <!-- This will be replaced by the news page when clicked -->
+    <div id ="content">
+	    
     </div>
+	 
 	  </main>
 	
   
