--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             // Create a new div to serve as our 'page'
             const newsPage = document.createElement('div');
             newsPage.id = 'news-page';
-            newsPage.innerHTML = '<iframe id="news-frame" src="news.html" width="100%" height="600" style="border:none;"></iframe>';
+            newsPage.innerHTML = '<iframe id="news-frame" src="news.html" width="100%" height="100%" style="border:none;"></iframe>';
             
             // Replace the content of the main content area with our new 'page'
             document.getElementById('content').innerHTML = '';
