--- a/news.html
+++ b/news.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=100%, initial-scale=1.0">
     <title>Personalized News</title>
 </head>
 <body>
-    <h1>News on Demand</h1>
-    <!-- Container for Search Results -->
-    <div>
-        <iframe id="search-iframe" src="https://searchworker.niraula300.workers.dev/#gsc.tab=0" width="100%" height="600"></iframe>
+    
+   <div>
+        <iframe id="search-iframe" src="https://searchworker.niraula300.workers.dev/#gsc.tab=0" width="100%" height="100%"></iframe>
     </div>
 </body>
 </html>
