--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             const heading = document.getElementById('main-heading').cloneNode(true);
             
             // Fetch the content of news.html
-            const response = await fetch('personalizednews/index.html');
+            const response = await fetch('newsondemand/index.html');
             let html = await response.text();
 
             // Create a temporary DOM to manipulate the fetched content
