--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
    <div id="content">
         <!-- This will be replaced by the news page when clicked -->
 
-	    
+	    <div id ="content">
+	    </div>
    
 	 
 	  </main>
