--- a/newsondemand/index.html
+++ b/newsondemand/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=100%, initial-scale=1.0">
-    <title>Personalized News</title>
+    <!-- Head content -->
 </head>
 <body>
-       <div>
+    <div>
         <iframe id="search-iframe" src="https://searchworker.niraula300.workers.dev/#gsc.tab=0" width="100%" height="100%"></iframe>
     </div>
+    <script>
+    document.getElementById('search-iframe').onload = function() {
+        try {
+            this.contentWindow.document.querySelectorAll('a').forEach(a => {
+                a.setAttribute('target', '_blank');
+                a.setAttribute('rel', 'noopener noreferrer');
+            });
+        } catch (error) {
+            console.error('Cannot modify links in the iframe due to cross-origin policy:', error);
+        }
+    };
+    </script>
 </body>
 </html>
