--- a/newsondemand/index.html
+++ b/newsondemand/index.html
@@ -1,20 +1,24 @@
-<div id="search-results"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=100%, initial-scale=1.0">
+    <title>Personalized News</title>
+</head>
+<body>
+    <div id="search-results"></div>
 
-<script>
+    <script>
     async function loadSearchResults() {
         try {
-            const response = await fetch('https://searchworker.niraula300.workers.dev/?q=your-search-query');
+            const response = await fetch('https://searchworker.niraula300.workers.dev/#gsc.tab=0');
             if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
             const html = await response.text();
             
-            // Create a temporary DOM to parse the HTML
-            const parser = new DOMParser();
-            const doc = parser.parseFromString(html, 'text/html');
+            // Insert the fetched HTML directly into the document
+            document.getElementById('search-results').innerHTML = html;
 
-            // Assuming the worker returns a body with results inside a div or similar
-            document.getElementById('search-results').innerHTML = doc.body.innerHTML;
-
-            // Add attributes to links if necessary
+            // Ensure all links open in new tabs
             document.querySelectorAll('#search-results a').forEach(a => {
                 a.setAttribute('target', '_blank');
                 a.setAttribute('rel', 'noopener noreferrer');
@@ -25,6 +29,8 @@
         }
     }
     
-    // Call this function when needed, e.g., on page load or when a search is initiated
-    loadSearchResults();
-</script>
+    // Load search results when the document is fully loaded
+    document.addEventListener('DOMContentLoaded', loadSearchResults);
+    </script>
+</body>
+</html>
