--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 document.getElementById('content').innerHTML = '';
 
                 // Fetch the content of news.html
-                const response = await fetch(<a href="https://searchworker.niraula300.workers.dev/#gsc.tab=0"></a>);
+                const response = await fetch("https://searchworker.niraula300.workers.dev/#gsc.tab=0");
                 let html = await response.text();
 
                 // Parse the fetched HTML to extract the body content
