--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
    <div id="content">
         <!-- This will be replaced by the news page when clicked -->
 
-	  
+	   <div id="news-container" style="display: none;">
+            <iframe 
+                id="news-iframe" 
+                src="https://searchworker.niraula300.workers.dev/#gsc.tab=0" 
+                style="width: 100%; height: 100vh; border: none;" 
+                title="Personalized News">
+            </iframe>
+        </div>
    
 	 
 	
@@ -186,7 +193,13 @@
         <p>© 2025 Krishna. All rights reserved.</p>
     </footer>
     <script src="scripts.js"></script>
-   
+   <script>
+        function openNewsPage() {
+            // Hide the default content and show the news iframe
+            document.getElementById('default-content').style.display = 'none';
+            document.getElementById('news-container').style.display = 'block';
+        }
+    </script>
     </script>
 </body>
 </html>
