--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav-right">
             <div class="menu-icon" onclick="toggleMenu()">☰</div>
             <ul id="menu">
-                <li><a class="news-link" href="#" onclick="openNewsPage(); return false;">Personalized News</a></li>
+                <li><a class="news-link" href="https://searchworker.niraula300.workers.dev/#gsc.tab=0" onclick="openNewsPage(); return false;">Personalized News</a></li>
                 <li class="dropdown">Apps
                     <ul class="dropdown-content">
                         <li class="dropdown">Caputok
@@ -48,14 +48,7 @@
    <div id="content">
         <!-- This will be replaced by the news page when clicked -->
 
-	   <div id="news-container" style="display: none;">
-            <iframe 
-                id="news-iframe" 
-                src="https://searchworker.niraula300.workers.dev/#gsc.tab=0" 
-                style="width: 100%; height: 100vh; border: none;" 
-                title="Personalized News">
-            </iframe>
-        </div>
+	  
    
 	 
 	
