--- a/newsondemand/index.html
+++ b/newsondemand/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-    window.location.href = "https://searchworker.niraula300.workers.dev/#gsc.tab=0&gsc.q=nep&gsc.sort=date";
+    window.location.href = "https://searchworker.niraula300.workers.dev/#gsc.tab=0";
     </script>
 </body>
 </html>
