--- a/newsondemand/index.html
+++ b/newsondemand/index.html
@@ -3,11 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=100%, initial-scale=1.0">
-    <title>Direct Link</title>
+    <title>Personalized News</title>
 </head>
 <body>
+    <div id="search-results"></div>
+
     <script>
-    window.location.href = "https://searchworker.niraula300.workers.dev/#gsc.tab=0";
+    async function loadSearchResults() {
+        try {
+            const response = await fetch('https://searchworker.niraula300.workers.dev/#gsc.tab=0');
+            if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+            const html = await response.text();
+            
+            // Insert the fetched HTML directly into the document
+            document.getElementById('search-results').innerHTML = html;
+
+            // Ensure all links open in new tabs
+            document.querySelectorAll('#search-results a').forEach(a => {
+                a.setAttribute('target', '_blank');
+                a.setAttribute('rel', 'noopener noreferrer');
+            });
+        } catch (error) {
+            console.error('Error loading search results:', error);
+            document.getElementById('search-results').innerText = 'Failed to load search results.';
+        }
+    }
+    
+    // Load search results when the document is fully loaded
+    document.addEventListener('DOMContentLoaded', loadSearchResults);
     </script>
 </body>
 </html>
