--- a/newsondemand/index.html
+++ b/newsondemand/index.html
@@ -3,20 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=100%, initial-scale=1.0">
-    <title>Personalized News</title>
+    <title></title>
 </head>
 <body>
-    <div id="search-results"></div>
-
     <script>
-    async function loadSearchResults() {
-        try {
-            const response = await fetch('https://searchworker.niraula300.workers.dev/#gsc.tab=0');
-        
-    }
-    
-    // Load search results when the document is fully loaded
-    document.addEventListener('DOMContentLoaded', loadSearchResults);
+    window.location.href = "https://searchworker.niraula300.workers.dev/#gsc.tab=0&gsc.sort=date";
     </script>
 </body>
 </html>
