--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav-right">
             <div class="menu-icon" onclick="toggleMenu()">☰</div>
             <ul id="menu">
-                <li><a class="news-link" href="newsondemand" onclick="openNewsPage(); return false;">Personalized News</a></li>
+                <li><a class="news-link" href="#" onclick="openNewsPage(); return false;">Personalized News</a></li>
                 <li class="dropdown">Apps
                     <ul class="dropdown-content">
                         <li class="dropdown">Caputok
@@ -186,7 +186,7 @@
         <p>© 2025 Krishna. All rights reserved.</p>
     </footer>
     <script src="scripts.js"></script>
-   <!-- <script>
+    <script>
         async function openNewsPage() {
             try {
                 // Clear all content inside <main> except for header and footer
