--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Krishna's Space</title>
     <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
     <link rel="stylesheet" href="styles.css">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
