--- a/newsondemand/index.html
+++ b/newsondemand/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-    window.location.href = "https://se.tab=0&gsc.sort=date";
+    window.location.href = "https://cse.google.com/cse?cx=51feb554fb38a47a0#gsc.tab=0";
     </script>
 </body>
 </html>
