--- a/index.html
+++ b/index.html
@@ -43,15 +43,32 @@
             </ul>
         </div>
     </nav>
-	  <main id="content">
-        		<!--<div class="intro">
+	  <main 
+        		<div class="intro">
        			 <img src="assets/images/welcome-banner.jpeg" alt="Main Photo">
             			<p>Welcome to Krishna's website. Here you will find various resources and information.</p>
      			   </div>
 		  
-   <div id="content">
-        <!-- This will be replaced by the news page when clicked -->
+   
+        
+  <div>
+        <h1>Watch the Most Viral Video in Last 24 Hours!</h1>
+        <p>Check out the latest viral video from TikTok:</p>
+    </div>
 
+    <!-- Embed Box -->
+    <div id="embed-box">
+        <iframe src="https://www.tiktok.com/discover/the-most-viral-video-in-last-24-hours" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+        </iframe>
+    </div>
+
+    <!-- Content below the box -->
+    <div>
+        <p>Enjoy browsing more viral content!</p>
+    </div>
 	  
    
 	 
