--- a/index.html
+++ b/index.html
@@ -52,23 +52,16 @@
    
         
   <div>
-        <h1>Watch the Most Viral Video in Last 24 Hours!</h1>
-        <p>Check out the latest viral video from TikTok:</p>
-    </div>
+       
 
-    <!-- Embed Box -->
-    <div id="embed-box">
-        <iframe src="https://www.tiktok.com/discover/the-most-viral-video-in-last-24-hours" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen>
-        </iframe>
+  <a href="https://www.tiktok.com/discover/the-most-viral-video-in-last-24-hours" target="_blank">
+    View the most viral TikTok video in the last 24 hours
+</a>
+
     </div>
 
     <!-- Content below the box -->
-    <div>
-        <p>Enjoy browsing more viral content!</p>
-    </div>
+  
 	  
    
 	 
